--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "",
+  "type": "module",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "node-fetch": "^3.1.0",
     "xml2js": "^0.4.23"
   }
 }
